<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFF"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/ppal">

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/login_uuid"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_colectorv1"
                android:id="@+id/logoCabecero"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/logoMedular"
                android:gravity="center"
                android:hint="Email"
                android:src="@drawable/logo_colectorv2"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/login_user"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="30dp"
                android:singleLine="true"
                android:maxLines="1"
                android:background="@drawable/text_line"
                android:id="@+id/editTextEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:padding="8dp"
                android:gravity="center"
                android:hint="@string/login_pwd"
                android:background="@drawable/text_line"
                android:layout_marginTop="30dp"
                android:singleLine="true"
                android:maxLines="1"
                android:id="@+id/editTextPassword" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_in"
                android:id="@+id/buttonSignIn"
                android:textSize="20dp"
                android:clickable="true"
                android:padding="15dp"
                android:layout_marginTop="30dp"
                android:textColor="#FFF"
                android:background="@drawable/rounded_shape"
                android:layout_gravity="center_horizontal"
                android:onClick="doLogin" />
</LinearLayout>